minor fixes, remove search bar, overflow issues

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -701,7 +701,7 @@ span.text-content {
 /* USER GUIDE */
 
 .guide-heading {
-	margin-top: 8px;
+	margin-top: 5px;
 	margin-bottom: 25px;
 	padding: 10px 0px;
 	background-color: #98d6ec;
@@ -734,15 +734,17 @@ span.text-content {
 	padding-right: 150px;
 }
 .guide-heading .btn-save {
+	width: 70px;
 	font-size: 10px;
 	position: absolute;
-	top: 105px;
+	top: 108px;
 	right: 445px;
 }
 .guide-heading .btn-cancel {
+	width: 70px;
 	font-size: 10px;
 	position: absolute;
-	top: 105px;
+	top: 108px;
 	right: 370px;
 }
 .city-guide-heading span {
@@ -1602,11 +1604,9 @@ ul.social-buttons li a:active {
 }
 .guide-hover .guide-hover-content {
 	position: absolute;
-	border-radius: 5px;
-	top: 50%;
+	top: 45%;
 	width: 100%;
 	height: 20px;
-	margin-top: -12px;
 	text-align: center;
 	font-size: 20px;
 	color: #fff;
@@ -1630,7 +1630,6 @@ ul.social-buttons li a:active {
 }
 .guide-item .guide-caption h4 a {
 	color: #4d4d4d;
-	text-decoration: none;
 }
 .guide-item .guide-caption .guide-author {
 	margin-top: 0px;
